# tgbot-cpp-conan

./: CMakeLists.txt  README.MD  conanfile.txt
locale/: en.lang  ru.lang
src/: main.cpp
src/driver/: DBHandler.cpp  DBHandler.h  StringBuilder.cpp  StringBuilder.h  StringBuilderDB.cpp  StringBuilderDB.h  StringParser.cpp  StringParser.h  strings.cpp  strings.h
src/lib/: CallbackQueryRecorder.cpp  CallbackQueryRecorder.h  CommandRecorder.cpp  CommandRecorder.h  DBHandler.cpp  DBHandler.h  KeyboardGenerator.cpp  KeyboardGenerator.h  MessageRecorder.cpp  MessageRecorder.h  my_lib.cpp  my_lib.h
